k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sygic-ingress
  namespace: sygic-telematics
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: sygic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-api
                port:
                  number: 8080
